--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
